--- a/css/element.css
+++ b/css/element.css
@@ -1,5 +1,9 @@
 .element {
+    height: 700px;
+    resize: both;
+    overflow: auto;
     background-image: url("../images/background01.jpg");
     background-color: aquamarine;
     background-position: center;
+    background-size: cover;
 }
