--- a/css/form.css
+++ b/css/form.css
@@ -21,6 +21,7 @@
     width: 100%;
     box-shadow: 5px 4px 18px -4px #557A59;
     align-items: center;
+    cursor: pointer;
 }
 
 .form__button:hover {
@@ -31,7 +32,7 @@
     background-color: hsl(120, 91%, 40%);
 }
 
-.legendText {
+.form__legendText {
     color:#f0f8ff;
     padding: 10px;
     border: 1px solid #034303;
